--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,6 +41,18 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
 
+    # Move .xcprivacy files from Compile Sources to Copy Bundle Resources.
+    # Some podspecs place these in source_files, which puts them in the compile
+    # phase where Xcode has no processing rule for text.xml files.
+    if target.respond_to?(:source_build_phase)
+      target.source_build_phase.files.to_a.each do |build_file|
+        if build_file.file_ref&.path&.end_with?('.xcprivacy')
+          target.source_build_phase.remove_build_file(build_file)
+          target.resources_build_phase.add_file_reference(build_file.file_ref)
+        end
+      end
+    end
+
     # Enable permission_handler permissions for iOS
     # See: https://pub.dev/packages/permission_handler#setup
     target.build_configurations.each do |config|
