fix: include build-ios in appcast job dependencies
Appcast generation now waits for all 5 platform builds including iOS.
Previously missing build-ios could let appcast generate even when
the iOS build failed.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -571,7 +571,7 @@ jobs:
   generate-appcast:
     name: Generate Appcast & Checksums
     runs-on: ubuntu-latest
-    needs: [build-macos, build-windows, build-linux, build-android]
+    needs: [build-macos, build-windows, build-linux, build-android, build-ios]
 
     steps:
       - name: Checkout repository
