ci: enforce coverage threshold via Codecov
Project target: 70% (ratchet up over time). Patch target: 80%
(new code in PRs). Codecov now fails CI on upload errors.
Ignores generated code and test files.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -96,7 +96,7 @@ jobs:
         if: always()
         with:
           files: coverage/lcov.info
-          fail_ci_if_error: false
+          fail_ci_if_error: true
 
   build-ios:
     name: Build iOS
