fix(ci): add Codecov token and graceful fallback
codecov-action@v4 requires an explicit token (unlike v3). Add token
parameter and only fail CI on upload errors when the token is configured.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -95,8 +95,9 @@ jobs:
         uses: codecov/codecov-action@v4
         if: always()
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: coverage/lcov.info
-          fail_ci_if_error: true
+          fail_ci_if_error: ${{ secrets.CODECOV_TOKEN != '' }}
 
   integration-test:
     name: Integration Test (macOS)
