fix(ci): disable Codecov fail_ci_if_error until repo is configured
Repository not yet registered on codecov.io, so uploads fail with
"Repository not found" even with a token. Keep upload attempt (for
when it's configured) but don't block CI on failure.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -97,7 +97,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: coverage/lcov.info
-          fail_ci_if_error: ${{ secrets.CODECOV_TOKEN != '' }}
+          fail_ci_if_error: false  # Enable after configuring repo on codecov.io
 
   integration-test:
     name: Integration Test (macOS)
