--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   flutter_blue_plus: ^2.1.0
   flutter_blue_plus_winrt: 0.0.10  # Pinned version for stability
   dive_computer: ^0.1.0-dev.2  # libdivecomputer FFI wrapper
+  libdivecomputer_plugin:
+    path: packages/libdivecomputer_plugin
   permission_handler: ^12.0.1
   file_picker: ^10.3.9
   image_picker: ^1.1.2
