feat: Android plugin with BLE transport and JNI wrapper
CMakeLists.txt builds libdivecomputer with NDK. JNI layer bridges
C wrapper to Kotlin. BleScanner and BleIoStream use Android BLE API
with semaphore-based sync for libdivecomputer's blocking I/O.

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,11 @@ build/
 /macos/Pods/
 /windows/flutter/ephemeral/
 
+# Plugin build artifacts
+packages/libdivecomputer_plugin/android/.cxx/
+packages/libdivecomputer_plugin/macos/build/
+packages/libdivecomputer_plugin/ios/build/
+
 # Local dev
 *.db
 *.log
