--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,6 +5,7 @@ analyzer:
   exclude:
     - "**/*.g.dart"
     - "**/*.freezed.dart"
+    - "packages/libdivecomputer_plugin/pigeons/**"
   errors:
     invalid_annotation_target: ignore
 
