--- a/packages/libdivecomputer_plugin/pubspec.yaml
+++ b/packages/libdivecomputer_plugin/pubspec.yaml
@@ -29,4 +29,4 @@ flutter:
       linux:
         pluginClass: LibdivecomputerPlugin
       windows:
-        pluginClass: LibdivecomputerPlugin
+        pluginClass: LibdivecomputerPluginCApi
